--- a/app/src/main/res/layout/activity_choose_egress.xml
+++ b/app/src/main/res/layout/activity_choose_egress.xml
@@ -15,22 +15,20 @@
         toolbar:navigationIcon="@drawable/ic_navigate_before_black_24dp"
         android:weightSum="1">
         <TextView
-            android:id="@+id/Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="请假类型"
+            android:text="选择外出"
             android:textColor="@color/white"
             android:textSize="18sp" />
 
+
     </android.support.v7.widget.Toolbar>
 
-    <ListView
-        android:id="@+id/list_type"
+
+    <FrameLayout
+        android:id="@+id/choose_out_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-
-
+        android:layout_height="match_parent" />
 
 </LinearLayout>
