--- a/app/src/main/res/layout/activity_traffic_reimburse.xml
+++ b/app/src/main/res/layout/activity_traffic_reimburse.xml
@@ -4,7 +4,6 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -12,25 +11,19 @@
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
-        toolbar:navigationIcon="@drawable/ic_navigate_before_black_24dp"
-        android:weightSum="1">
+        toolbar:navigationIcon="@drawable/ic_navigate_before_black_24dp">
         <TextView
-            android:id="@+id/Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="请假类型"
+            android:text="交通报销"
             android:textColor="@color/white"
             android:textSize="18sp" />
-
     </android.support.v7.widget.Toolbar>
 
-    <ListView
-        android:id="@+id/list_type"
+    <FrameLayout
+        android:id="@+id/traffic_reimburse_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-
-
+        android:layout_height="match_parent" />
 
 </LinearLayout>
