--- a/app/src/main/res/layout/activity_traffic_tool.xml
+++ b/app/src/main/res/layout/activity_traffic_tool.xml
@@ -4,7 +4,6 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -19,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="请假类型"
+            android:text="交通工具"
             android:textColor="@color/white"
             android:textSize="18sp" />
 
@@ -30,7 +29,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
-
-
 
 </LinearLayout>
