--- a/app/src/main/res/layout/reimburse_detail_content.xml
+++ b/app/src/main/res/layout/reimburse_detail_content.xml
@@ -214,28 +214,31 @@
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="70dp"
+                    android:layout_height="wrap_content"
+                    android:minHeight="70dp"
                     android:background="@drawable/menu_item_bg"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:paddingLeft="16dp">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="70dp"
                         style="@style/textTitle"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:text="费用明细"
                         android:textColor="@color/dark_grey"/>
 
                     <TextView
                         android:id="@+id/cost_detail"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:gravity="end"
                         style="@style/textTitle"
+                        android:layout_weight="1"
                         android:text="hhh"
                         android:textColor="@color/gray"
-                        android:layout_marginRight="10dp"/>
+                        android:layout_marginRight="10dp"
+                        android:layout_marginEnd="10dp"/>
 
 
 
