--- a/app/src/main/res/layout/list_item_process.xml
+++ b/app/src/main/res/layout/list_item_process.xml
@@ -7,9 +7,9 @@
     android:background="@drawable/task_item_bg">
 
     <RelativeLayout
-        android:layout_gravity="center"
         android:layout_width="250dp"
         android:layout_height="0dp"
+        android:layout_marginLeft="10dp"
         android:layout_weight="1"
         android:orientation="horizontal">
         <ImageView
