--- a/app/src/main/res/layout/list_item_task.xml
+++ b/app/src/main/res/layout/list_item_task.xml
@@ -69,7 +69,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
 
-                android:src="@drawable/delete"/>
+                android:src="@drawable/cancel"/>
         </LinearLayout>
 
 
