--- a/app/src/main/res/layout/task_detail_content.xml
+++ b/app/src/main/res/layout/task_detail_content.xml
@@ -143,7 +143,8 @@
                     <ExpandableListView
                         android:id="@+id/logs_List"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:listSelector="@android:color/transparent"  />
 
                 </LinearLayout>
 
