--- a/app/src/main/res/layout/task_log_list_item.xml
+++ b/app/src/main/res/layout/task_log_list_item.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:minHeight="100dp"
+    android:layout_height="80dp"
+    android:minHeight="80dp"
     android:gravity="center">
 
 
@@ -24,18 +24,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_margin="10dp">
         <TextView
             android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:text="人事完成任务"
-            android:layout_marginBottom="10dp"
+            android:gravity="center_vertical"
             android:textSize="15sp"
-            android:textColor="@color/dark_grey"/>
+            android:textColor="@color/dark_grey"
+            android:layout_weight="1"/>
         <TextView
             android:id="@+id/content"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="XXXXXX"
@@ -43,12 +45,12 @@
         <TextView
             android:id="@+id/time"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
+            android:layout_height="match_parent"
             android:gravity="bottom"
+
             android:text="2017-06-27 15:23:05"
             android:textColor="@color/gray"
-            android:layout_weight="1"/>
+            />
 
     </LinearLayout>
 </LinearLayout>
